fix: Penanganan
