# backend/routes/api.php
@@ -41,7 +41,6 @@ Route::middleware('jwt.auth')->group(function () {
         Route::get('penanganan', [PenangananController::class, 'index']);
         Route::get('videos', [VideoController::class, 'showAllVideos']);
         Route::get('penanganan/{id}', [PenangananController::class, 'show']);
-        Route::get('penanganan/pasien', [PenangananController::class, 'getPenangananByPasien']);
     });
 
     // Route khusus Dokter
@@ -57,9 +56,7 @@ Route::middleware('jwt.auth')->group(function () {
         Route::post('penanganan', [PenangananController::class, 'store']);
         Route::put('penanganan/{id}', [PenangananController::class, 'update']);
         Route::delete('penanganan/{id}', [PenangananController::class, 'delete']);
- 
-        Route::put('/penanganan/{id}/kirim', [PenangananController::class, 'kirimKePasien']);
-        
+
         Route::delete('penanganan/{id}/force-delete', [PenangananController::class, 'forceDelete']);
         Route::post('penanganan/{id}/assign/{userId}', [PenangananController::class, 'assignToUser']);
 
